short email fix

--- a/templates/api/email_response/career_choice.html
+++ b/templates/api/email_response/career_choice.html
@@ -399,6 +399,41 @@
               <span>.</span>
               {% endif %}
 
+                <!-- SECONDARY SCHOOL STUDIED-->
+              {% if secondary_studied %}
+
+              <tr>
+                <td
+                  style="
+                    padding: 0;
+                    padding-bottom: 20px;
+                    background-color: white;
+                  "
+                >
+                  <table
+                    width="100%"
+                    style="border-spacing: 0"
+                    role="presentation"
+                  >
+                    <tr>
+                      <td style="padding-bottom: 10px">
+                        <p style="color: #404141">
+                          <span style="font-weight: 700"
+                            >Department:</span
+                          >
+                          <span>{{secondary_studied}}</span>
+                        </p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td style="height: 1px; background-color: #404141"></td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+              {% else %}
+              <span>.</span>
+              {% endif %}
               <!-- TECHNOLOGIES INTERESTED -->
 
               {% if tech_interest %}
