changes are made

--- a/templates/api/email_response/interested_emails.html
+++ b/templates/api/email_response/interested_emails.html
@@ -307,7 +307,8 @@ Enrollment - {{course}}
                   </td>
                 </tr>
                 <!-- FEE -->
-                 
+                {% if fee %}
+                
               <tr>
                 <td
                   style="
@@ -325,11 +326,8 @@ Enrollment - {{course}}
                       <td style="padding-bottom: 10px">
                         <p style="color: #404141">
                           <span style="font-weight: 700">Fee:</span>
-                          <span> {% if fee %}
-                                  {{ fee }}
-                                  {% else %}
-                                  {{ fee_dollar }}
-                                  {% endif %}
+                          <span> 
+                                 {{fee}} 
                             </span>
                         </p>
                       </td>
@@ -340,6 +338,41 @@ Enrollment - {{course}}
                   </table>
                 </td>
               </tr>
+              {% endif %}   
+
+              <!-- FEE -->
+              {% if fee_dollar %}
+                
+              <tr>
+                <td
+                  style="
+                    padding: 0;
+                    padding-bottom: 20px;
+                    background-color: white;
+                  "
+                >
+                  <table
+                    width="100%"
+                    style="border-spacing: 0"
+                    role="presentation"
+                  >
+                    <tr>
+                      <td style="padding-bottom: 10px">
+                        <p style="color: #404141">
+                          <span style="font-weight: 700">Fee(Dollar):</span>
+                          <span> 
+                                 {{fee_dollar}} 
+                            </span>
+                        </p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td style="height: 1px; background-color: #404141"></td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+              {% endif %}   
                <!-- Duration -->
                <tr>
                 <td
