email employer registration

--- a/templates/api/email_response/employer_sign_up.html
+++ b/templates/api/email_response/employer_sign_up.html
@@ -1,6 +1,6 @@
 {% block subject %}
  
-Enquiry - Anchorsoft Academy
+Welcome to Anchorsoft Academy
     
 {% endblock subject %}
 
@@ -172,7 +172,23 @@ Enquiry - Anchorsoft Academy
                         margin: 0;
                       "
                     >
-                      We got your message, we will respond shortly, Thank you.
+                      Your account was created succesfully, but you will not be able to login or post
+                      jobs right now  untill the detail of your company is vetted.
+                      <br>
+                      <br>
+
+                      This is our measure to ward off job scammers and keep the platform safe for all.
+
+                      <br>
+                      <br>
+
+                      Thank you for your patience and understanding.
+
+                      <br>
+                      <br>
+                      Anchorsoft Academy Team
+
+
                     </p>
                   </td>
                 </tr>
@@ -181,84 +197,8 @@ Enquiry - Anchorsoft Academy
                 </tr>
               </table>
             </td>
-          </tr>
-          <tr>
-            <td style="padding: 0 20px; background-color: white">
-              <table width="100%" style="border-spacing: 0" role="presentation">
-                <tr>
-                  <td style="padding-top: 20px; padding-bottom: 10px">
-                    <p style="color: #404141">
-                      <span style="font-weight: 700">Name:</span>
-                      <span>{{ contact_person }}</span>
-                    </p>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="height: 1px; background-color: #404141"></td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td style="padding: 0 20px; background-color: white">
-              <table width="100%" style="border-spacing: 0" role="presentation">
-                <tr>
-                  <td style="padding-top: 20px; padding-bottom: 10px">
-                    <p style="color: #404141">
-                      <span style="font-weight: 700">Email:</span>
-                      <span>{{email}}</span>
-                    </p>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="height: 1px; background-color: #404141"></td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td style="padding: 0 20px; background-color: white">
-              <table width="100%" style="border-spacing: 0" role="presentation">
-                <tr>
-                  <td style="padding-top: 20px; padding-bottom: 10px">
-                    <p style="color: #404141">
-                      <span style="font-weight: 700">Mobile:</span>
-                      <span>{{ mobile }}</span>
-                    </p>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="height: 1px; background-color: #404141"></td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td
-              style="
-                padding: 0 20px;
-                padding-bottom: 60px;
-                background-color: white;
-              "
-            >
-              <table width="100%" style="border-spacing: 0" role="presentation">
-                <tr>
-                  <td style="padding-top: 20px; padding-bottom: 10px">
-                    <p style="color: #404141">
-                      <span style="font-weight: 700">Your Message</span>
-                    </p>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="padding: 15px; border: 1px solid #404141">
-                    <p style="color: #404141">
-                      {{message}}
-                    </p>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
+          </tr>         
+     
           <tr>
             <td style="padding: 20px 0; background-color: #244d68">
               <table width="100%" style="border-spacing: 0" role="presentation">
