--- a/templates/api/email_response/interested_emails.html
+++ b/templates/api/email_response/interested_emails.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 {% block subject %} 
 Enrollment - {{course}} 
 {% endblock subject %}
@@ -181,27 +182,7 @@ Enrollment - {{course}}
                   </p>
                 </td>
               </tr>
-              <tr>
-                <td style="text-align: start; padding-bottom: 25px">
-                  <p
-                    style="font-size: 17px; color: #244d68; font-weight: 500"
-                  ></p>
-                </td>
-              </tr>
-              <tr>
-                <td style="text-align: start; padding-bottom: 25px">
-                  <p
-                    style="font-size: 17px; color: #244d68; font-weight: 500"
-                  ></p>
-                </td>
-              </tr>
-              <tr>
-                <td style="text-align: start; padding-bottom: 25px">
-                  <p
-                    style="font-size: 17px; color: #244d68; font-weight: 500"
-                  ></p>
-                </td>
-              </tr>
+        
 
               <!-- THANK YOU FOR CHOOSING  ANCHORSOFT-->
               <tr>
@@ -306,8 +287,8 @@ Enrollment - {{course}}
                     </table>
                   </td>
                 </tr>
-                <!-- FEE -->
                 {% if fee %}
+                <!-- FEE -->
                 
               <tr>
                 <td
@@ -327,7 +308,7 @@ Enrollment - {{course}}
                         <p style="color: #404141">
                           <span style="font-weight: 700">Fee:</span>
                           <span> 
-                                 {{fee}} 
+                                 NGN{{fee | intcomma}} 
                             </span>
                         </p>
                       </td>
@@ -340,8 +321,8 @@ Enrollment - {{course}}
               </tr>
               {% endif %}   
 
-              <!-- FEE -->
               {% if fee_dollar %}
+              <!-- FEE DOLLAR-->
                 
               <tr>
                 <td
@@ -359,9 +340,9 @@ Enrollment - {{course}}
                     <tr>
                       <td style="padding-bottom: 10px">
                         <p style="color: #404141">
-                          <span style="font-weight: 700">Fee(Dollar):</span>
+                          <span style="font-weight: 700">Fee:</span>
                           <span> 
-                                 {{fee_dollar}} 
+                                 ${{fee_dollar | intcomma}} 
                             </span>
                         </p>
                       </td>
