fields add to career applicants

--- a/templates/api/email_response/career_opening.html
+++ b/templates/api/email_response/career_opening.html
@@ -251,6 +251,24 @@ Career Opening - Anchorsoft Academy
             </td>
           </tr>
 
+          <!-- COURSE STUDY -->
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Course:</span>
+                      <span>{{ course_study }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
           <tr>
             <td style="padding: 0 20px; background-color: white">
               <table width="100%" style="border-spacing: 0" role="presentation">
@@ -259,6 +277,24 @@ Career Opening - Anchorsoft Academy
                     <p style="color: #404141">
                       <span style="font-weight: 700">Highest Qualification:</span>
                       <span>{{ highest_qualification }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- DEGREE -->
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Degree:</span>
+                      <span>{{ degree }}</span>
                     </p>
                   </td>
                 </tr>
